# scitadel

./: .envrc  .gitignore  .gitmessage  .hadolint.yaml  .mcp.json  .pre-commit-config.yaml  .vig-os  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml  flake.nix  justfile  justfile.project  pyproject.toml  renovate.json
.cargo/: config.toml
.cursor/: agent-models.toml  worktrees.json
.cursor/rules/: branch-naming.mdc  changelog.mdc  coding-principles.mdc  commit-messages.mdc  single-source-of-truth.mdc  subagent-delegation.mdc  tdd.mdc
.cursor/skills/ci_check/: SKILL.md
.cursor/skills/ci_fix/: SKILL.md
.cursor/skills/code_debug/: SKILL.md
.cursor/skills/code_execute/: SKILL.md
.cursor/skills/code_review/: SKILL.md
.cursor/skills/code_tdd/: SKILL.md
.cursor/skills/code_verify/: SKILL.md
.cursor/skills/design_brainstorm/: SKILL.md
.cursor/skills/design_plan/: SKILL.md
.cursor/skills/git_commit/: SKILL.md
.cursor/skills/inception_architect/: SKILL.md
.cursor/skills/inception_explore/: README.md  SKILL.md
.cursor/skills/inception_plan/: SKILL.md
.cursor/skills/inception_scope/: SKILL.md
.cursor/skills/issue_claim/: SKILL.md
.cursor/skills/issue_create/: SKILL.md
.devcontainer/: .gitignore  README.md  devcontainer.json  docker-compose.project.yaml  docker-compose.yml  justfile.base  justfile.devc  justfile.gh  justfile.worktree  workspace.code-workspace.example
.devcontainer/scripts/: check-agent-identity.py  check-pr-agent-fingerprints.py  copy-host-user-conf.sh  derive-branch-summary.sh  gh_issues.py  init-git.sh  init-precommit.sh  initialize.sh  post-attach.sh  post-create.sh  post-start.sh  prepare-commit-msg-strip-trailers.py  resolve-branch.sh  setup-gh-repo.sh  setup-git-conf.sh  verify-auth.sh  version-check.sh
.githooks/: commit-msg  pre-commit  prepare-commit-msg
.github/: CODEOWNERS  agent-blocklist.toml  dependabot.yml  label-taxonomy.toml  pull_request_template.md  renovate-default.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: binaries.yml  ci.yml  codeql.yml  prepare-release.yml  promote-release.yml  publish-crates.yml  release-core.yml  release-extension.yml  release-publish.yml  release.yml  renovate-changelog.yml  rust-ci.yml  scorecard.yml  sync-issues.yml  sync-main-to-dev.yml  vhs.yml
crates/scitadel-adapters/: Cargo.toml
crates/scitadel-adapters/src/: arxiv.rs  download.rs  epo.rs  error.rs  inspire.rs  lens.rs  lib.rs  openalex.rs  patentsview.rs  pubmed.rs
crates/scitadel-cli/: Cargo.toml
crates/scitadel-cli/src/: commands.rs  main.rs
crates/scitadel-cli/tests/: bib.rs  bib_csl_json.rs  bib_diff.rs  bib_import.rs  bib_rekey.rs  init.rs
crates/scitadel-core/: Cargo.toml
crates/scitadel-core/src/: bibtex_key.rs  config.rs  credentials.rs  error.rs  lib.rs
crates/scitadel-core/src/models/: annotation.rs  assessment.rs  citation.rs  doi.rs  mod.rs  paper.rs  question.rs  search.rs
crates/scitadel-core/src/ports/: mod.rs  repository.rs  source.rs
crates/scitadel-core/src/services/: dedup.rs  mod.rs  orchestrator.rs
crates/scitadel-db/: Cargo.toml
crates/scitadel-db/migrations/: 001_initial.sql  004_paper_state.sql  005_annotations.sql  006_search_fts.sql  007_paper_download_state.sql  008_tui_state.sql  009_bibtex_keys.sql  010_shortlists.sql  011_paper_aliases.sql  012_paper_tags.sql
crates/scitadel-db/src/: error.rs  lib.rs
crates/scitadel-db/src/sqlite/: annotations.rs  assessments.rs  citations.rs  migrations.rs  mod.rs  paper_aliases.rs  paper_state.rs  paper_tags.rs  papers.rs  questions.rs  searches.rs  shortlist.rs  tui_state.rs
crates/scitadel-export/: Cargo.toml
crates/scitadel-export/src/: bibtex.rs  csl_json.rs  csv_export.rs  diff.rs  diff_format.rs  diff_input.rs  json_export.rs  lib.rs  sidecar.rs  slug.rs  snapshot.rs
crates/scitadel-export/src/import/: matcher.rs  merge.rs  mod.rs  parse.rs  side_effects.rs
crates/scitadel-mcp/: Cargo.toml
crates/scitadel-mcp/src/: bib_import.rs  bib_rekey.rs  bib_watch.rs  events.rs  extract.rs  lib.rs  server.rs  tools.rs
crates/scitadel-scoring/: Cargo.toml
crates/scitadel-scoring/src/: claude.rs  cli.rs  error.rs  lib.rs  provenance.rs  scorer.rs
crates/scitadel-tui/: Cargo.toml
crates/scitadel-tui/src/: app.rs  data.rs  lib.rs  tasks.rs  theme.rs
crates/scitadel-tui/src/theme/: mod.rs  osc11.rs
crates/scitadel-tui/src/views/: annotation_prompt.rs  bib_export_prompt.rs  dashboard.rs  detail.rs  inbox.rs  mod.rs  nav_tree.rs  papers.rs  questions.rs  queue.rs  reader.rs  searches.rs  tasks.rs  util.rs
crates/scitadel-tui/src/widgets/: status_bar.rs
docs/: COMMIT_MESSAGE_STANDARD.md  container-ci-quirks.md  themes.md
docs/decisions/: ADR-003-2026-04-19-0.3.0-execution.md  ADR-004-2026-04-19-sentence-id-normalization.md  ADR-005-2026-04-19-0.4.0-execution.md  ADR-006-2026-04-21-bibtex-key-algorithm.md
docs/designs/: DES-001-2026-02-26-scitadel-phase1-architecture.md  DES-002-2026-03-08-rust-rewrite-development-plan.md  DES-003-2026-03-08-phase2-mcp-scoring-tui.md
docs/rfcs/: RFC-001-2026-02-26-scitadel-problem-space.md
docs/templates/: RFC.md
scripts/: check-skill-names.sh  devc-remote.sh  devc_remote_uri.py  setup-labels.sh
src/scitadel/: __init__.py  cli.py  config.py  mcp_server.py  secrets.py
tests/: __init__.py  test_adapters.py  test_cli.py  test_config.py  test_contracts.py  test_domain_models.py  test_example.py  test_integration.py  test_mcp.py  test_repositories.py  test_resolve.py  test_scoring.py  test_services.py  test_snowball.py  test_tui.py
tests/fixtures/: zotero-export.bib
tests/vhs/: README.md  annotations-in-detail.tape  cli-bib-import.tape  cli-bib-rekey.tape  cli-question-workflow.tape  cli-search.tape  example.tape  init-wizard.tape  offline-indicator.tape  open-externally.tape  papers-download-state.tape  question-dashboard.tape  queue-tab.tape  reading-queue-star.tape  theme-dark.tape  theme-light.tape  theme-toggle.tape  tui-annotation-write.tape  tui-annotations-reader.tape  tui-export-keybind.tape  tui-inbox.tape  tui-launch.tape  tui-paper-note.tape
(+58 files in other folders)
