[workspace]
resolver = "2"
members = [
    "crates/scitadel-core",
    "crates/scitadel-db",
    "crates/scitadel-adapters",
    "crates/scitadel-scoring",
    "crates/scitadel-export",
    "crates/scitadel-cli",
    "crates/scitadel-mcp",
    "crates/scitadel-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vig-os/scitadel"

[workspace.dependencies]
# Core
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# XML
quick-xml = { version = "0.37", features = ["serialize"] }

# SQLite
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Credentials
keyring = { version = "3", features = ["apple-native", "sync-secret-service"] }
rpassword = "7"

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# MCP
rmcp = { version = "0.1", features = ["server", "transport-io"] }
schemars = "0.8"

# Content extraction (PDF / HTML → text)
pdf-extract = "0.7"
scraper = "0.20"

# Testing
insta = { version = "1", features = ["json"] }
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
proptest = "1"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
too_many_lines = "allow"
doc_markdown = "allow"
type_complexity = "allow"
redundant_closure_for_method_calls = "allow"
needless_lifetimes = "allow"
unnecessary_literal_bound = "allow"
uninlined_format_args = "allow"
manual_let_else = "allow"
needless_pass_by_value = "allow"
unreadable_literal = "allow"
unnecessary_wraps = "allow"

[profile.release]
lto = true
strip = true
