[project]
name = "scitadel"
version = "0.1.0"
description = "Programmable, reproducible scientific literature retrieval"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "bibtexparser>=1.4",
    "pyalex>=0.14",
    "pydantic>=2.0",
]

[project.scripts]
scitadel = "scitadel.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ipykernel>=6.0",
    "jupyter>=1.0",
]
science = [
    "numpy>=2.0",
    "scipy>=1.14",
    "pandas>=2.2",
    "matplotlib>=3.9",
]
all = [
    "scitadel[dev,science]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scitadel"]

[tool.ruff]
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "hatchling>=1.25",
    "rich>=13.0.0",
]
