[project]
name = "scitadel"
version = "0.1.0"
description = "Programmable, reproducible scientific literature retrieval"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "defusedxml>=0.7",
    "httpx>=0.27",
    "bibtexparser>=1.4",
    "pyalex>=0.14",
    "pydantic>=2.13.0",
    "mcp>=1.26.0",
    "anthropic>=0.84.0",
    "keyring>=25.0",
]

[project.scripts]
scitadel = "scitadel.cli:cli"
scitadel-mcp = "scitadel.mcp_server:main"
scitadel-tui = "scitadel.tui:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ipykernel>=6.0",
    "jupyter>=1.0",
]
science = [
    "numpy>=2.0",
    "scipy>=1.14",
    "pandas>=2.2",
    "matplotlib>=3.9",
]
tui = [
    "textual>=1.0.0",
]
all = [
    "scitadel[dev,science,tui]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scitadel"]

[tool.ruff]
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "contract: tests that hit real external APIs (deselect with -m 'not contract')",
]

[dependency-groups]
dev = [
    "hatchling>=1.25",
    "rich>=13.0.0",
]
