[package]
name = "scitadel-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
contract-tests = []

[dependencies]
scitadel-core = { path = "../scitadel-core" }
reqwest = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
insta = { workspace = true }

[lints]
workspace = true
