[package]
name = "scitadel-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "scitadel"
path = "src/main.rs"

[dependencies]
scitadel-core = { path = "../scitadel-core" }
scitadel-db = { path = "../scitadel-db" }
scitadel-adapters = { path = "../scitadel-adapters" }
scitadel-scoring = { path = "../scitadel-scoring" }
scitadel-export = { path = "../scitadel-export" }
scitadel-tui = { path = "../scitadel-tui" }
chrono = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
