[package]
name = "scitadel-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
toml = "0.8"
futures = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
