[package]
name = "scitadel-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core domain models, services, and ports for the scitadel scientific-literature retrieval toolkit."
readme = "../../README.md"

[dependencies]
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
toml = "0.8"
futures = { workspace = true }
sha1 = { workspace = true }
unicode-normalization = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
