[package]
name = "scitadel-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
scitadel-core = { path = "../scitadel-core" }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
