[package]
name = "scitadel-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SQLite-backed repositories and migrations for scitadel."
readme = "../../README.md"

[dependencies]
scitadel-core = { path = "../scitadel-core", version = "0.5.0" }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
strsim = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
