[package]
name = "scitadel-export"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
scitadel-core = { path = "../scitadel-core" }
serde = { workspace = true }
serde_json = { workspace = true }
csv = "1"

[dev-dependencies]
insta = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
