[package]
name = "scitadel-export"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "BibTeX, JSON, and CSV exporters for scitadel search results."
readme = "../../README.md"

[dependencies]
scitadel-core = { path = "../scitadel-core", version = "0.5.0" }
serde = { workspace = true }
serde_json = { workspace = true }
csv = "1"
biblatex = "0.11"
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
