[package]
name = "scitadel-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "MCP server exposing scitadel tools to host LLMs."
readme = "../../README.md"

[dependencies]
scitadel-core = { path = "../scitadel-core", version = "0.5.0" }
scitadel-db = { path = "../scitadel-db", version = "0.5.0" }
scitadel-adapters = { path = "../scitadel-adapters", version = "0.5.0" }
scitadel-scoring = { path = "../scitadel-scoring", version = "0.5.0" }
scitadel-export = { path = "../scitadel-export", version = "0.5.0" }
rmcp = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
pdf-extract = { workspace = true }
scraper = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
