[package]
name = "scitadel-scoring"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Claude-powered paper relevance scoring for scitadel."
readme = "../../README.md"

[features]
default = ["scoring"]
scoring = []

[dependencies]
scitadel-core = { path = "../scitadel-core", version = "0.1.0" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
insta = { workspace = true }

[lints]
workspace = true
