[package]
name = "scitadel-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Interactive TUI for browsing scitadel searches, papers, and assessments."
readme = "../../README.md"

[dependencies]
scitadel-core = { path = "../scitadel-core", version = "0.5.0" }
scitadel-db = { path = "../scitadel-db", version = "0.5.0" }
scitadel-adapters = { path = "../scitadel-adapters", version = "0.5.0" }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
